# SoftwareRendering

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  DepthFunc.hpp  FrameBuffer.hpp  LICENSE  ModelShader.cpp  ModelShader.hpp  ModelShader2.hpp  PPM.cpp  PPM.hpp  README.md  RenderPipeLine.cpp  RenderPipeLine.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  Texture2D.cpp  Triangle.hpp  Util.hpp  main.cpp  xmake.lua
Cpp/: xmake.lua
Cpp/Src/: main.cpp
Cpp/Src/include/SoftwareRendering/: BarycentricTestResult.hpp  Camera.hpp  Line2D.hpp  Rect.hpp  Texture2D.hpp  Triangle.hpp  Util.hpp
Cpp/Src/include/SoftwareRendering/Shader/: ImageShader.hpp  ModelShader2.hpp
Cpp/Src/src/: BarycentricTestResult.cpp  Camera.cpp  FrameBuffer.cpp  Rect.cpp  Renderer.cpp  Util.cpp
Cpp/Src/src/Shader/: ImageShader.cpp  ModelShader2.cpp
Resource/: box.dae  box_with_texutre.dae  box_with_texutre.fbx
Rust/example/: Cargo.toml
Rust/example/src/: camera.rs  image_shader.rs  lib.rs  main.rs  model_shader.rs  triangle_shader.rs
Rust/libsr/: Cargo.toml
Rust/libsr/src/: barycentric_test_result.rs  benchmark.rs  color.rs  depth_cmp.rs  error.rs  frame_buffer.rs  graphics_pipeline.rs  lib.rs  rect.rs  renderer.rs  shader.rs  texture.rs
Src/: BarycentricTestResult.hpp  PPM.cpp  PPM.hpp  Rect.hpp  Util.hpp  main.cpp
